--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,46 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-sqlalchemy==2.0.23
-asyncpg==0.29.0
 alembic==1.12.1
-geoalchemy2==0.14.2
+annotated-types==0.7.0
+anyio==3.7.1
+async-timeout==5.0.1
+asyncpg==0.29.0
+bcrypt==4.3.0
+certifi==2025.4.26
+cffi==1.17.1
+click==8.1.8
+cryptography==45.0.2
+dnspython==2.7.0
+ecdsa==0.19.1
+email_validator==2.1.1
+exceptiongroup==1.3.0
+fastapi==0.104.1
+GeoAlchemy2==0.14.2
+greenlet==3.0.3
+h11==0.16.0
+httptools==0.6.4
+idna==3.10
+Mako==1.3.10
+MarkupSafe==3.0.2
 numpy==1.24.3
-shapely==2.0.2
-python-jose[cryptography]==3.3.0
-python-multipart==0.0.6
-passlib[bcrypt]==1.7.4
+packaging==25.0
+passlib==1.7.4
+pyasn1==0.6.1
+pycparser==2.22
 pydantic==2.5.0
 pydantic-settings==2.1.0
-websockets==12.0
-python-dotenv==1.0.0
-greenlet==3.0.3
-email-validator==2.1.1
+pydantic_core==2.14.1
 pyproj==3.6.1
+python-dotenv==1.0.0
+python-jose==3.3.0
+python-multipart==0.0.6
+PyYAML==6.0.2
+rsa==4.9.1
+shapely==2.0.2
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.23
+starlette==0.27.0
+typing_extensions==4.13.2
+uvicorn==0.24.0
+uvloop==0.21.0
+watchfiles==1.0.5
+websockets==12.0
