--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,19 +27,19 @@ services:
       - "8010:8000"
     depends_on:
       - db
-  # frontend:
-  #   build:
-  #     context: ./frontend
-  #     dockerfile: Dockerfile
-  #   environment:
-  #     NODE_ENV: production
-  #     NEXT_PUBLIC_API_URL: http://localhost:8010
-  #     NEXT_PUBLIC_GOOGLE_MAPS_API_KEY: AIzaSyAiZHKZvgcLWyto_A-dM4zzcQwZCCraaRA
-  #   ports:
-  #     - "3000:3000"
-  #   depends_on:
-  #     backend:
-  #       condition: service_started
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    environment:
+      NODE_ENV: production
+      NEXT_PUBLIC_API_URL: http://localhost:8010
+      NEXT_PUBLIC_GOOGLE_MAPS_API_KEY: AIzaSyAiZHKZvgcLWyto_A-dM4zzcQwZCCraaRA
+    ports:
+      - "3000:3000"
+    depends_on:
+      backend:
+        condition: service_started
 
 volumes:
   postgres_data:
