--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
+    "geist": "^1.4.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.511.0",
     "next": "15.1.8",
