--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,21 +27,21 @@ services:
       - "8010:8000"
     depends_on:
       - db
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    env_file:
-      - .env
-    environment:
-      - NODE_ENV=${NODE_ENV}
-      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
-      - NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=${NEXT_PUBLIC_GOOGLE_MAPS_API_KEY}
-    ports:
-     - "3000:3000"
-    depends_on:
-     backend:
-       condition: service_started
+#  frontend:
+#    build:
+#      context: ./frontend
+#      dockerfile: Dockerfile
+#    env_file:
+#      - .env
+#    environment:
+#      - NODE_ENV=${NODE_ENV}
+#      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+#      - NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=${NEXT_PUBLIC_GOOGLE_MAPS_API_KEY}
+#    ports:
+#     - "3000:3000"
+#    depends_on:
+#     backend:
+#       condition: service_started
 
 volumes:
   postgres_data:
