--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -3,7 +3,8 @@
 script_location = alembic
 prepend_sys_path = .
 version_path_separator = os
-sqlalchemy.url = postgresql+asyncpg://utm_user:utm_password@localhost:5432/utm_db
+# Здесь может быть любой валидный URL, он будет переопределяться
+sqlalchemy.url = postgresql+asyncpg://user:pass@localhost:5432/dbname
 
 [post_write_hooks]
 
